--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -44,7 +44,7 @@
           <p class="card-text">
             <%= listing.description ? listing.description.substring(0, 80) + '...' : 'No description available.' %>
           </p>
-          <a href="/listing/<%= listing._id %>" class="btn btn-primary">View Listing</a>
+          <a href="/listings/<%= listing._id %>" class="btn btn-primary">View Listing</a>
         </div>
       </div>
     </div>
